# styled-pdf

./: .gitignore  README.md  pyproject.toml
styled_pdf/: cli.py  pipeline.py
styled_pdf/aggregation/: css_merger.py  html_assembler.py
styled_pdf/analysis/: claude_client.py  page_analyzer.py  prompts.py
styled_pdf/extraction/: image_renderer.py  ocr_detector.py  pdf_reader.py
styled_pdf/output/: writer.py
