[project]
name = "styled-pdf"
version = "0.1.0"
description = "Extract semantic HTML+CSS from styled PDFs using Claude vision"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "PyMuPDF>=1.24.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
styled-pdf = "styled_pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
